src/styles/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@plugin "@tailwindcss/typography";

@custom-variant dark (&:is(.dark *));

@theme {
	--font-sans: var(--font-sans), ui-sans-serif, system-ui, sans-serif,
		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
	--font-signifier: var(--font-signifier), serif;

	--breakpoint-3xl: 1920px;
}

@theme inline {
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--color-card: var(--card);
	--color-card-foreground: var(--card-foreground);
	--color-popover: var(--popover);
	--color-popover-foreground: var(--popover-foreground);
	--color-primary: var(--primary);
	--color-primary-foreground: var(--primary-foreground);
	--color-secondary: var(--secondary);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-muted: var(--muted);
	--color-muted-foreground: var(--muted-foreground);
	--color-accent: var(--accent);
	--color-accent-foreground: var(--accent-foreground);
	--color-destructive: var(--destructive);
	--color-border: var(--border);
	--color-input: var(--input);
	--color-ring: var(--ring);
	--color-chart-1: var(--chart-1);
	--color-chart-2: var(--chart-2);
	--color-chart-3: var(--chart-3);
	--color-chart-4: var(--chart-4);
	--color-chart-5: var(--chart-5);
	--color-sidebar: var(--sidebar);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-ring: var(--sidebar-ring);
	--color-icon: var(--icon);

	--text-heading: 2rem; /* 32px */
	--text-heading--line-height: calc(2.25 / 2); /* 1.125 */

	--text-page-heading-mobile: 1.875rem; /* 30px */
	--text-page-heading-mobile--line-height: calc(2.25 / 1.875); /* 1.2 */
	--text-page-heading-desktop: 3rem; /* 48px */
	--text-page-heading-desktop--line-height: calc(2.5 / 2.25); /* 1.111 */

	--text-section-heading-mobile: 1.25rem; /* 20px */
	--text-section-heading-mobile--line-height: calc(1.5 / 1.25); /* 1.2 */
	--text-section-heading-desktop: 2.75rem; /* 44px */
	--text-section-heading-desktop--line-height: calc(2.25 / 2); /* 1.125 */

	--text-pattern-list-item-title-mobile: 1.25rem; /* 20px */
	--text-pattern-list-item-title-mobile--line-height: calc(1.5 / 1.25); /* 1.2 */
	--text-pattern-list-item-title-desktop: 1.5rem; /* 24px */
	--text-pattern-list-item-title-desktop--line-height: calc(2 / 1.5); /* 1.333 */
}

@theme {
	--color-neutral-50: var(--color-neutral-50);
	--color-neutral-100: var(--color-neutral-100);
	--color-neutral-200: var(--color-neutral-200);
	--color-neutral-300: var(--color-neutral-300);
	--color-neutral-400: var(--color-neutral-400);
	--color-neutral-500: var(--color-neutral-500);
	--color-neutral-600: var(--color-neutral-600);
	--color-neutral-700: var(--color-neutral-700);
	--color-neutral-800: var(--color-neutral-800);
	--color-neutral-900: var(--color-neutral-900);
	--color-neutral-950: var(--color-neutral-950);
}
/* ... */

